xidlc/tests/invalid/http_stream_invalid_codec.idl
#pragma xidlc package xidlc
#pragma xidlc version v1.0.0

interface InvalidStreamCodecService {
    @server_stream
    @stream_codec("yaml")
    @get(path = "/events")
    string watch();
};
